ALl Test passed

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,11 @@
 <ul class="nav justify-content-center bg-dark">
-  <li 
-    class="nav-item"
-    *ngFor="let subsection of subsections">
-    <a 
+  <li class="nav-item" *ngFor="let subsection of subsections">
+    <a
       href="javascript:void(0);"
-      class="nav-link  text-white small" 
-      (click)="">  </a>
+      class="nav-link text-white small"
+      (click)="dispatchAction(subsection)"
+    >
+      {{ subsection }}
+    </a>
   </li>
 </ul>
